# wgpu-renderer

./: .gitignore  Cargo.toml  build.rs  notes.md
shaders/: light.vert  shader.frag  shader.vert
src/: camera.rs  light.rs  main.rs  model.rs  shader.vert  texture.rs
